--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,5 +1,7 @@
 <ul>
   <% @subjects.each do |subject| %>
-    <li><%= subject.name %></li>
+    <li><%= link_to subject.name, subject_path(subject) %></li>
   <% end %>
 </ul>
+
+<p><%= link_to "Home", root_path %></p>
