Add course form

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [subject, course] do |f| %>
+<%= simple_form_for course do |f| %>
 
   <% if course.errors.any? %>
     <div id="error_explanation">
