--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a New Course</h1>
 
-<%= render "courses/form", subject: @subject, course: @course %>
+<%= render "courses/form", course: @course %>
 
 <%= link_to "Home", root_path %>
