--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,59 @@
   </head>
 
   <body>
+    <div class="contain-to-grid sticky">
+      <nav class="top-bar" data-topbar role="navigation">
+       <ul class="title-area">
+        <li class="name">
+        <h1><%= link_to "Learn From Me", root_path %></h1>
+        </li>
+         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+      </ul>
+
+      <section class="top-bar-section">
+        <!-- Right Nav Section -->
+        <ul class="right">
+          <li class="active"><a href="#"></a></li>
+          <li class="has-dropdown">
+          <% if current_user %>
+            <a href="#"><%= current_user.first_name %></a>
+          <% else %>
+            <a href="#">User</a>
+          <% end %>
+            <ul class="dropdown">
+            <% if user_signed_in? %>
+              <li><%= link_to "Edit Account Information", edit_user_registration_path %> </li>
+              <li><%= link_to "Sign out", destroy_user_session_path, data: {method: 'delete'} %></li>
+              <% else %>
+                <li><%= link_to "Sign in", new_user_session_path %></li>
+                <li><%= link_to "Create Account", new_user_registration_path %></li>
+            <% end %>
+            </ul>
+          </li>
+        </ul>
+
+        <!-- Left Nav Section -->
+        <ul class="left">
+          <li><%= link_to "Subjects", subjects_path %></li>
+
+          <li class="has-form">
+            <div class="row collapse">
+              <%= form_tag courses_path, method: 'get' do %>
+                <div class="large-8 small-8 columns">
+                  <%= text_field_tag :search, params[:search], placeholder:"Find a course"%>
+                </div>
+                <div class="large-4 small-3 columns">
+                   <%= submit_tag "Search", :name => nil,  class: "search-button"%>
+                </div>
+              <% end %>
+            </div>
+          </li>
+      </ul>
+      </section>
+      </nav>
+    </div>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
