--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -13,10 +13,10 @@
   <% end %>
 
   <%= f.input :name %>
-  <%= f.association :subject, collection: Subject.all, prompt: "Choose a Subject" %>
+  <%= f.association :subject, collection: Subject.order(:name), prompt: "Choose a Subject" %>
   <%= f.input :start_date, as: :string, input_html: { class: "datepicker" }, label: "Start Date" %>
   <%= f.input :duration %>
-  <%= f.input :level_id %>
+  <%= f.association :level, collection: Level.all, prompt: "Choose a Level" %>
   <%= f.input :price %>
   <%= f.input :description %>
 
