--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -6,4 +6,7 @@
   <% end %>
 </ul>
 
-<p><%= link_to "Back to subjects", subjects_path %></p>
+<%= paginate @courses, window: 2 %>
+
+<p><%= link_to "Add a course", new_course_path %></p>
+
