--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,5 +1,11 @@
 <h1><%= @course.name %> (<%= @course.level.name %>)</h1>
 
+<% if current_user == @course.user %>
+  <%= link_to "Edit Course", edit_course_path(@course) %> |
+  <%= link_to "Delete Course", course_path(@course),
+  method: :delete, data: { confirm: "Are your sure?" } %>
+<% end %>
+
 <h3>Price:
 <% if @course.price == 0 %>
   Free
