Testing for reviews finished

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -31,6 +31,11 @@
   <li>
   <%= review.rating %> <br />
   <%= review.body %> -- <%= review.user.first_name %> <%= review.user.last_name %>
+  <% if current_user == review.user %>
+    <%= link_to "Edit Review", edit_course_review_path(@course, review) %> |
+    <%= link_to "Delete Review", course_review_path(@course, review),
+  method: :delete, data: { confirm: "Are your sure?" } %>
+  <% end %>
   </li>
 <% end %>
 
