Can join courses now

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -24,6 +24,12 @@
 
 <h4>Taught By: <%= link_to @course.user.first_name + " " + @course.user.last_name, user_path(@course.user) %></h4>
 
+<% if !current_user || @course.class_members.where(user_id: current_user.id) == [] %>
+  <p><%= link_to "Enroll", new_course_class_member_path(@course) %></p>
+<% else %>
+  <p><%= button_to "Leave Class", course_class_member_path(@course, current_user), method: :delete, data: { confirm: "Are your sure?" } %></p>
+<% end %>
+
 <h3>Reviews: </h3>
 <p><%= link_to "Add a review", new_course_review_path(@course) %></p>
 
