--- a/app/views/class_members/_form.html.erb
+++ b/app/views/class_members/_form.html.erb
@@ -15,5 +15,5 @@
   <%= f.input :qualifications %>
   <%= f.input :reason_for_joining %>
 
-  <%= f.button :submit %>
+  <%= f.button :submit, "Submit", class:"submit-button" %>
 <% end %>
