--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -20,5 +20,5 @@
   <%= f.input :price %>
   <%= f.input :description %>
 
-  <%= f.button :submit %>
+  <%= f.button :submit, "Submit", class:"submit-button" %>
 <% end %>
