--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -15,5 +15,5 @@
   <%= f.input :rating, collection: (1..5), prompt: "Choose a rating" %>
   <%= f.input :body %>
 
-  <%= f.button :submit %>
+  <%= f.button :submit, "Submit", class:"submit-button" %>
 <% end %>
