--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @courses.each do |course| %>
-    <li><%= link_to course.name, course_path(course) %></li>
+    <li><%= link_to course.name, course_path(course), class:"course-links" %></li>
   <% end %>
 </ul>
 
